kubernetes/cluster/active/apps/books/bookboss/overlays/prod/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bookboss
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Self-hosted book library manager.
    gethomepage.dev/group: Media
    gethomepage.dev/icon: bookboss.svg
    gethomepage.dev/name: BookBoss
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=bookboss"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: http-gateway-api
      namespace: envoy-gateway-ingress
  hostnames:
    - "bookboss.${FQDN_01}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: bookboss
          namespace: bookboss
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
